--- a/Assembly-CSharp.Player.csproj
+++ b/Assembly-CSharp.Player.csproj
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
-    <LangVersion>8.0</LangVersion>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -53,9 +53,6 @@
     <UnityVersion>2020.3.20f1</UnityVersion>
   </PropertyGroup>
   <ItemGroup>
-    <Analyzer Include="/Applications/Visual Studio.app/Contents/Resources/lib/monodevelop/AddIns/MonoDevelop.Unity/Analyzers/Microsoft.Unity.Analyzers.dll" />
-  </ItemGroup>
-  <ItemGroup>
     <Compile Include="Assets/Scripts/Battle/BattleHud.cs" />
     <Compile Include="Assets/Scripts/GamePlay/MapArea.cs" />
     <Compile Include="Assets/Scripts/Battle/PartyScreen.cs" />
@@ -71,6 +68,8 @@
     <Compile Include="Assets/Scripts/Pokemon/MoveBase.cs" />
     <Compile Include="Assets/Scripts/Battle/BattleUnit.cs" />
     <Compile Include="Assets/Scripts/Pokemon/Pokemon.cs" />
+    <Compile Include="Assets/Scripts/Pokemon/Condition.cs" />
+    <Compile Include="Assets/Scripts/Data/CondeitionDB.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets/Art/Fonts/README.txt" />
